		  libwx in the Frameworks directory (which are supposed to be
		  from an old build).

	centaur:
		* OpenBSD patch.

	Coronas:
		* Patch to show kad status in amuleweb (Bug 1103)
		* typo in src/webserver/default/shared.php.

	drkirkby:
		* Test for gcc before including gcc specific flags on the
		  compiler line.

	DLH:
		* amulegui.xpm icon.

	Gerd78:
		* Added autostart-xas to rpm .spec files.
		* Patch for autoconf >= 2.60.
		* Patch for redefinition of $(docdir) in docs/Makefile.am.
		* Patch for aMule .desktop files.
		* Added amulegui desktop icon (with Vollstrecker).
		* Patch for fixing aMule spec file in Fedora and Mandriva.
		* Test for perl File::Copy in configure.

	Gnucco:
		* Workaround for string serialization bug.
		* Workaround for aMule does not publish new files on kad.

	GonoszTopi:
		* Added ability to compile amulecmd without thread support in wx.
		* Fixed source seeds handling on startup.
		* Proper restoration of startup locale after checking available
		  locales.
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CC's CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.
		* Added support for magnet ed2k links.
		* Improve cross compilation
		* Fixed segmentation fault in amuled
		* Proper restoration of startup locale after checking available locales
		* Don't allow sources coming from .seeds to be cleaned up for a while
		  after startup
		* Improve accuracy for ticks
		* Improve debug output
		* Don't add clients when shutting down
		* Added a simple (ascii) text file reader class
		* Sed denoiser - removes excessive messages from compilation - 
		  Thanks to Vollstrecker for the idea and discussions.
		* Drop path component from logged file names.
		* Fix for perl v5.8.8
		* wxCas compilation fixes for wxCVS